assets/styles.css
:root {
  --purple: #301534;
  --pink: #F8EEFF;
  --white: #FFFFFF;
  --pink100: #AD28EB;
}

* {
  margin: 0px;
  padding: 0.1px;
  box-sizing: border-box;
}


@font-face {
  font-family: 'WorkSans';
  src: url('fonts/WorkSans-VariableFont_wght.ttf')
}

body {
  font-family: 'WorkSans';
}

li {
  list-style: none;
}


/*



Container styles



*/


.container {
  width: 1440px;
  min-height: 900px;
  margin: 0px auto;
  background-color: var(--pink);
  background-image: url('images/background-pattern-desktop.svg');
  background-repeat: no-repeat;
}



/*




Card styles




*/



.faq-card {
  width: 600px;
  min-height: 500px;
  background-color: var(--white);
  margin: 150px auto;
  border-radius: 20px;
  background-image: url('images/icon-star.svg');
  background-repeat: no-repeat;
  background-position: 40px 53px;
  padding-left: 40px;
}


.faq-card-header {
  height: 66px;
  width: 520px;
  padding-left: 75px;
  margin-top: 40px;
}

.faq-card-header h1 {
  font-size: 56px;
  color: var(--purple);
}


/*





Card question and answer css




*/


.questions-answer-list {
  width: 520px;
  margin-top: 32px;
  color: var(--purple);
}

.qa-li {
  min-height: 78px;
  border-bottom: var(--pink) solid 1px;
  padding-top: 28px;
  position: relative;
  cursor: pointer;
}

.questions-list > li:last-child {
  border: none;
  margin-bottom: 24px;
}

.qa-li h2 {
  font-size: 18px;
}



.qa-li h2:hover {
  color: var(--pink100);
}



.qa-li p {
  font-size: 16px;
  color: #8B6990;
  text-align: justify;
  height: 0px;
  overflow: hidden;
}


.plus-icon {
  position: absolute;
  top: 24px;
  right: 0px;
  cursor: pointer;
}
.minus-icon {
  position: absolute;
  top: 24px;
  right: 0px;
  cursor: pointer;
}

.hide {
  display: none;
}



/*





Media query 




*/



@media screen and (max-width: 1405px) {
  .container {
    width: 100%;
  }
}





@media screen and (max-width: 700px) {
  .faq-card {
    width: 70%;
    min-height: 500px;
    padding-left: 3%;
    padding-right: 3%;
  }
  
  
  .faq-card-header {
    height: 66px;
    width: auto;
    padding-left: 75px;
    margin-top: 40px;
  }
  
  .faq-card-header h1 {
    font-size: 56px;
    color: var(--purple);
  }



  .questions-answer-list {
    width: auto;
  }
  
  .qa-li {
    min-height: 78px;
    border-bottom: var(--pink) solid 1px;
    padding-right: 36px;
  }
  
  .questions-list > li:last-child {
    border: none;
    margin-bottom: 24px;
  }

  .qa-li h2 {
    font-size: 18px;
  }

  
  .qa-li p {
    font-size: 16px;
    color: #8B6990;
    text-align: justify;
    height: 0px;
    overflow: hidden;
  }

}



@media screen and (max-width: 550px) {
  .faq-card {
    width: 327px;
    background-size: 24px 24px;
    background-position: 24px 32px;
    padding-left: 24px;
    padding-right: 24px;
    min-height: 390px;
    margin-top: 200px;
  }
  .faq-card-header {
    padding-left: 48px;
    margin-top: 24px;
    height: auto;
  }
  
  .faq-card-header h1 {
    font-size: 32px;
  }

  .questions-answer-list {
    margin-top: 0px;
  }

  .qa-li > h2 {
    font-size: 16px;
  }

  .qa-li > p {
    font-size: 14px;
    text-align: justify;
  }

}

